--- a/fstab.yaml
+++ b/fstab.yaml
@@ -2,4 +2,4 @@ mountpoints:
   /: https://drive.google.com/drive/folders/1uj3n3UUZVr_WwrEdJ8kiOuObiDIEUBAr
   
 folders:
-  /dist/: /dist/index.html
+  /: /dist/index.html
