--- a/fstab.yaml
+++ b/fstab.yaml
@@ -2,4 +2,4 @@ mountpoints:
   /static/: https://drive.google.com/drive/folders/1uj3n3UUZVr_WwrEdJ8kiOuObiDIEUBAr
   
 folders:
-  /: /spa/build/index.html
+  /app/: /spa/build/index.html
